--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="dist/main.css" media="screen" title="no title">
   </head>
   <body>
-    <h1 class="h1 white">Pig Latin</h1>
+    <h1 class="h1 base">Pig Latin</h1>
     <form id="pig-latin">
       <label class="loud bold center dark-base">Enter English Text</label>
       <input type="text" id="english" />
