--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 class="h1 base">Pig Latin</h1>
     <div id="pig-latin">
       <label class="loud bold center dark-base">Enter English Text</label>
-      <input type="text" id="english" />
+      <input type="text" id="english" class="pig-latin-input base-font" />
       <button id="translate" class="btn loud white">Translate</button>
     </div>
     <div class="piggy">
