--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   </head>
   <body class="bg-light">
     <h1 class="h1 base">Pig Latin</h1>
-    <div id="pig-latin">
+    <div id="pig-latin" class="pig-latin center">
       <label class="loud bold center dark-base">Enter English Text</label>
-      <input type="text" id="english" class="pig-latin-input base-font" />
-      <button id="translate" class="btn loud white">Translate</button>
+      <div class="pig-latin-translate center">
+        <input type="text" id="english" class="pig-latin-input base-font" />
+        <button id="translate" class="btn loud white">Translate</button>
+      </div>
     </div>
     <div class="piggy">
       <div id="output" class="center bubble">
